force-app/main/default/objects/SmartFridge__c/fields/deviceId__c.field-meta.xml
<CustomField>
    <fullName>deviceId__c</fullName>
    <description>DeviceId refers to the Electric Imp device.</description>
    <externalId>true</externalId>
    <inlineHelpText>DeviceId refers to the Electric Imp device id.</inlineHelpText>
    <label>DeviceId</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>