force-app/main/default/objects/SmartFridge__c/fields/humidity__c.field-meta.xml
<CustomField>
    <fullName>humidity__c</fullName>
    <description>Relative humidity expressed as a percent.) It is a measure of the actual amount of water vapor in the air compared to the total amount of vapor that can exist in the air at its current temperature.</description>
    <inlineHelpText>Relative humidity expressed as a percent.) It is a measure of the actual amount of water vapor in the air compared to the total amount of vapor that can exist in the air at its current temperature.</inlineHelpText>
    <label>Humidity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>