force-app/main/default/objects/SmartFridge__c/fields/temperature__c.field-meta.xml
<CustomField>
    <fullName>temperature__c</fullName>
    <inlineHelpText>Temperature measured by the sensor in Celsius (°C)</inlineHelpText>
    <label>Temperature</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>