force-app/main/default/objects/SmartFridge__c/fields/ts__c.field-meta.xml
<CustomField>
    <fullName>ts__c</fullName>
    <inlineHelpText>Date and Time of the measurement.</inlineHelpText>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>