force-app/main/default/objects/SmartFridge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>temperature__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/9/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>19:00:00.000Z</value>
    </filters>
    <label>All</label>
</ListView>